chore: configure webpack and babel

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Restaurant Reviews",
-  "short_name": "Restaurant Reviews",
+  "short_name": "RR",
   "background_color": "#FFFFFF",
   "theme_color": "#FFFFFF",
   "scope": "/",
