--- a/app/manifest.json
+++ b/app/manifest.json
@@ -6,12 +6,12 @@
   "scope": "/",
   "icons": [
     {
-      "src": "/img/icon-512.png",
+      "src": "/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "/img/icon-32.png",
+      "src": "/icons/icon-32.png",
       "sizes": "32x32",
       "type": "image/png"
     }
