--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "browserify": "^16.2.3",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
+    "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
+    "gulp-image-resize": "^0.13.0",
     "gulp-imagemin": "^5.0.3",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.1",
     "imagemin-mozjpeg": "^8.0.0",
