--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.1",
+    "gulp-webpack": "^1.5.0",
     "imagemin-mozjpeg": "^8.0.0",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
