feat: complet syncing and fix accessibility issues

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "browser-sync": "^2.26.3",
     "browserify": "^16.2.3",
     "gulp": "^4.0.0",
-    "gulp-babel": "^8.0.0",
+    "gulp-autoprefixer": "^6.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
     "gulp-image-resize": "^0.13.0",
@@ -35,7 +35,6 @@
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.1",
-    "gulp-webpack": "^1.5.0",
     "imagemin-mozjpeg": "^8.0.0",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
