--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "gulpfile.js",
   "scripts": {
     "start": "gulp",
-    "build": "gulp dist",
+    "dist": "gulp dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
